RESOLVED FIXED130619
REGRESSION (r165356): Predictive Chinese input is broken
https://bugs.webkit.org/show_bug.cgi?id=130619
Summary REGRESSION (r165356): Predictive Chinese input is broken
Alexey Proskuryakov
Reported 2014-03-21 14:59:48 PDT
Predictive Chinese input is very special - it doesn't have an inline input area, but critically depends on us calling -discardMarkedText at exactly the right times. Changes in when editor state is updated resulted in us calling it too eagerly. Updating editor state was and remains hopelessly broken, thankfully, we will not depend on it as much with async input. Steps to reproduce: 1. Enable Cangjie input. 2. Type "sina" 3. Press "1" several times. Expected results: each time "1" is pressed, something is inserted, and a new suggestion popup appears. Actual results: After the first time, there is no suggestion popup.
Attachments
proposed patch (1.42 KB, patch)
2014-03-21 15:02 PDT, Alexey Proskuryakov
enrica: review+
Alexey Proskuryakov
Comment 1 2014-03-21 15:02:39 PDT
Created attachment 227495 [details] proposed patch
Enrica Casucci
Comment 2 2014-03-21 15:54:05 PDT
Comment on attachment 227495 [details] proposed patch Looks good.
Alexey Proskuryakov
Comment 3 2014-03-21 15:59:07 PDT
Note You need to log in before you can comment on or make changes to this bug.