REGRESSION (r165356): Predictive Chinese input is broken https://bugs.webkit.org/show_bug.cgi?id=130619

Reviewed by Enrica Casucci.

* UIProcess/mac/WebPageProxyMac.mm: (WebKit::WebPageProxy::executeKeypressCommands):
Like after insertText, we are no longer in an intermediate state after executeKeypressCommands.
Make sure that we don't call -discardMarkedText the next time we get a non-intermediate
state with closed composition.



Canonical link: https://commits.webkit.org/148644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166105 268f45cc-cd09-0410-ab3c-d52691b4dbfc